# WorkLog-dev

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  setup_web.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  coverage.yml  release.yml
api/: .env.example  Dockerfile  alembic.ini  requirements.txt  seed.py
api/alembic/: env.py
api/alembic/versions/: 01b80423b177_initial_schema.py
api/app/: config.py  main.py
api/app/models/: __init__.py  portfolio.py  user.py
api/app/routers/: auth.py  portfolios.py
api/app/schemas/: auth.py  portfolio.py
api/tests/: conftest.py  test_auth.py  test_portfolios.py
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: auth.rs  mod.rs  portfolio.rs  sync.rs  task.rs
cli/src/connectors/: git.rs  github.rs
cli/src/core/: config.rs  http.rs  mod.rs  model.rs  output.rs
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/api/og/[slug]/: route.tsx
web/app/p/[slug]/: loading.tsx  page.tsx
web/components/: CommitTimeline.tsx  PortfolioView.tsx  TaskCard.tsx  ThemeToggle.tsx  VerifiedBadge.tsx
web/components/ui/: badge.tsx  card.tsx  skeleton.tsx
web/lib/: api.ts  schemas.ts  types.ts
