[package]
name = "worklog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap        = { version = "4",    features = ["derive"] }
colored     = "2"
indicatif   = "0.17"
git2        = "0.18"
regex       = "1"
once_cell   = "1"
chrono      = { version = "0.4",  features = ["serde"] }
tokio       = { version = "1",    features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
keyring     = "2"
toml        = "0.8"
dirs        = "5"
anyhow      = "1"

# Optional: TUI dashboard (feature: tui)
ratatui    = { version = "0.26", optional = true }
crossterm  = { version = "0.27", optional = true }

# Optional: Offline SQLite cache (feature: offline)
rusqlite   = { version = "0.31", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
tui     = ["dep:ratatui", "dep:crossterm"]
offline = ["dep:rusqlite"]
